tests/Semantic/test_2_r15.out
Error type 15 at Line 6: redefine struct: Child
