tests/Semantic/test_2_r15.spl
struct Child
{
  int name;
  int friends[10];
};
struct Child
{
	int id;
  int age;
};
int test_2_r15()
{
  struct Child Amy;
  return 0;
}
